translation-tool/inputs/source_meta/objects/FAP_Token_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FAP Tokens Pricing</relationshipLabel>
        <relationshipName>FAP_Tokens_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compatible_FAP_Token_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compatible FAP Token Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Is_Voucher__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Data_Allowance_Manager__c</field>
                <operation>equals</operation>
                <value>Gateway</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FAP Tokens Pricing</relationshipLabel>
        <relationshipName>FAP_Tokens_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Free_FAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Free FAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unique__c</fullName>
        <label>Is Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>FAP Tokens Pricing</relationshipLabel>
        <relationshipName>FAP_Tokens_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transport_SO_name__c</fullName>
        <label>Transport SO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FAP Token Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Transport_SO_name__c</columns>
        <columns>Offer__c</columns>
        <columns>Compatible_FAP_Token_Product__c</columns>
        <columns>Is_Free_FAP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FTP-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAP Tokens Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Free_FAP</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Is_Free_FAP__c = true ,Price__c &gt;0)</errorConditionFormula>
        <errorMessage>Price must be zero if Is_Free_FAP__c is Checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OfferorTransportSO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( Offer__c )), NOT(ISBLANK( Transport_SO_name__c )))</errorConditionFormula>
        <errorMessage>Only one of Offer or Transport Name should be populated.</errorMessage>
    </validationRules>
</CustomObject>